--- a/src/webpages/templates/register.html
+++ b/src/webpages/templates/register.html
@@ -4,11 +4,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>О программе</title>
+    <title>Регистрация</title>
 </head>
 
 <body>
-
+    <div id="registration" class="auth-form">
+        <input id="login" class="inline-input" type="text">
+        <input id="password" class="inline-input" type="password">
+        <button class="submit button"></button>
+    </div>
 </body>
 
 </html>
@@ -18,3 +22,4 @@
 
 <script src="/static/scripts/jquery-3.7.1.min.js"></script>
 <script src="/static/scripts/base.js"></script>
+<script src="/static/scripts/auth.js"></script>
