--- a/src/webpages/templates/register.html
+++ b/src/webpages/templates/register.html
@@ -9,16 +9,18 @@
 
 <body>
     <div id="registration" class="auth-form">
-        <input id="login" class="inline-input" type="text">
-        <input id="password" class="inline-input" type="password">
-        <button class="submit button"></button>
+        <span class="form-title">Регистрация</span>
+        <input id="login" class="inline input" type="text" placeholder="Имя пользователя">
+        <input id="password" class="inline input" type="password" placeholder="Пароль">
+        <button class="button submit">Зарегистрироваться</button>
     </div>
 </body>
 
 </html>
 
-<link rel="stylesheet" href="/static/styles/base.css">
+<link rel="stylesheet" href="/static/styles/colors.css">
 <link rel="stylesheet" href="/static/styles/style.css">
+<link rel="stylesheet" href="/static/styles/auth.css">
 
 <script src="/static/scripts/jquery-3.7.1.min.js"></script>
 <script src="/static/scripts/base.js"></script>
