--- a/src/webpages/templates/about.html
+++ b/src/webpages/templates/about.html
@@ -13,7 +13,7 @@
 
 </html>
 
-<link rel="stylesheet" href="/static/styles/base.css">
+<link rel="stylesheet" href="/static/styles/colors.css">
 <link rel="stylesheet" href="/static/styles/style.css">
 
 <script src="/static/scripts/jquery-3.7.1.min.js"></script>
