--- a/src/webpages/static/styles/auth.css
+++ b/src/webpages/static/styles/auth.css
@@ -1,4 +1,4 @@
-#registration {
+.auth-form {
     display: flex;
     flex-direction: column;
     gap: var(--gap);
@@ -8,6 +8,11 @@
     border: none;
     border-radius: var(--border-radius);
     width: 30%;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.sign-in-hint {
     margin-left: auto;
     margin-right: auto;
 }
