--- a/src/webpages/templates/sign-up.html
+++ b/src/webpages/templates/sign-up.html
@@ -4,16 +4,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Регистрация</title>
+    <title>Вход</title>
 </head>
 
 <body>
-    <div id="registration" class="auth-form">
-        <span class="form-title">Регистрация</span>
+    <div id="sign-up" class="auth-form">
+        <span class="form-title">Вход</span>
         <input id="login" class="inline input" type="text" placeholder="Имя пользователя">
         <input id="password" class="inline input" type="password" placeholder="Пароль">
-        <span class="sign-in-hint">Вы можете <a href="/sign-in">войти</a>, если уже зарегистрированы</span>
-        <button class="button submit">Зарегистрироваться</button>
+        <button class="button submit">Войти</button>
     </div>
 </body>
 
