--- a/src/webpages/templates/about.html
+++ b/src/webpages/templates/about.html
@@ -9,6 +9,10 @@
 
 <body>
     <main>
+        <span>Имя пользователя: <span id="user-name">Загрузка...</span></span>
+        <br>
+        <span>Имя пользователя: <span id="role-name">Загрузка...</span></span>
+        <br>
         <span>Название: Система рекомендаций v0.1</span>
         <br>
         <span>Разработчик: Студент группы 25ПИнж(м)РИтС Петров Алексей</span>
@@ -24,3 +28,4 @@
 <script src="/static/scripts/cookies.js"></script>
 <script src="/static/scripts/base.js"></script>
 <script src="/static/scripts/auth.js"></script>
+<script src="/static/scripts/about.js"></script>
