looks like its done

--- a/src/webpages/templates/about.html
+++ b/src/webpages/templates/about.html
@@ -11,7 +11,7 @@
     <main>
         <span>Имя пользователя: <span id="user-name">Загрузка...</span></span>
         <br>
-        <span>Имя пользователя: <span id="role-name">Загрузка...</span></span>
+        <span>Роль: <span id="role-name">Загрузка...</span></span>
         <br>
         <span>Название: Система рекомендаций v0.1</span>
         <br>
