--- a/src/webpages/templates/analytics.html
+++ b/src/webpages/templates/analytics.html
@@ -9,7 +9,7 @@
 
 <body>
     <main>
-        <span class="code-format">Загрузка...</span>
+        <span id="loading-placeholder" class="code-format">Загрузка...</span>
     </main>
 </body>
 
@@ -22,4 +22,5 @@
 <script src="/static/scripts/cookies.js"></script>
 <script src="/static/scripts/base.js"></script>
 <script src="/static/scripts/auth.js"></script>
+<script src="/static/scripts/table.js"></script>
 <script src="/static/scripts/analytics.js"></script>
