--- a/src/webpages/templates/index.html
+++ b/src/webpages/templates/index.html
@@ -8,7 +8,8 @@
 </head>
 
 <body>
-
+    <main>
+    </main>
 </body>
 
 </html>
@@ -20,3 +21,5 @@
 <script src="/static/scripts/cookies.js"></script>
 <script src="/static/scripts/base.js"></script>
 <script src="/static/scripts/auth.js"></script>
+<script src="/static/scripts/table.js"></script>
+<script src="/static/scripts/info.js"></script>
